Bug 322973 - power management spams notification bar with errors
Summary: power management spams notification bar with errors
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: 4.10.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-30 05:28 UTC by illumilore
Modified: 2013-08-10 14:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illumilore 2013-07-30 05:28:34 UTC
Whenever a battery on my kubuntu laptop gets low, I will get constant repeating messages that say:The profile "LowBattery" tried to activate DisableDesktopEffects, a non existent action. This is usually due to an installation problem or to a configuration problem

It should not say this.

Reproducible: Always
Comment 1 Kai Uwe Broulik 2013-08-01 09:11:12 UTC
DisableDesktopEffects? Wow, that action has been removed in 2 years ago I think.

You might want to remove the offensive lines from your ~/.kde/share/config/powermanagementprofilesrc
or just delete it and setup your power management (brightness levels, auto-suspend timeout etc) again
Comment 2 Alex Fiestas 2013-08-01 19:47:17 UTC
Git commit 4fb9668669c6bc789f0e0213e4ddbf67aa5dc797 by Àlex Fiestas.
Committed on 01/08/2013 at 19:32.
Pushed by afiestas into branch 'master'.

Replace Notification by kWarning on missing/unsupported actions

hat new behavior makes the notification "Action not found" deprecated
since now it is totally possible that a profile tries to load an
unsupported action such DimDisplay on most workstations.
Related: bug 302846, bug 321508

REVIEW:111768

M  +4    -4    powerdevil/daemon/powerdevilcore.cpp

http://commits.kde.org/kde-workspace/4fb9668669c6bc789f0e0213e4ddbf67aa5dc797
Comment 3 Alex Fiestas 2013-08-05 13:11:08 UTC
Git commit e352d07f33207959bdc13352cedd4322eb107a7e by Àlex Fiestas.
Committed on 01/08/2013 at 19:32.
Pushed by afiestas into branch 'KDE/4.11'.

Replace Notification by kWarning on missing/unsupported actions

hat new behavior makes the notification "Action not found" deprecated
since now it is totally possible that a profile tries to load an
unsupported action such DimDisplay on most workstations.
Related: bug 302846, bug 321508

REVIEW:111768
(cherry picked from commit 4fb9668669c6bc789f0e0213e4ddbf67aa5dc797)

M  +4    -4    powerdevil/daemon/powerdevilcore.cpp

http://commits.kde.org/kde-workspace/e352d07f33207959bdc13352cedd4322eb107a7e