daemon/powerdevilcore.cpp
@@ -354,10 +354,10 @@ void Core::loadProfile(bool force)
                 action->onProfileLoad();
             } else {
                 // Ouch, error. But let's just warn and move on anyway
-                emitNotification("powerdevilerror", i18n("The profile \"%1\" tried to activate %2, "
-                                "a non existent action. This is usually due to an installation problem"
-                                " or to a configuration problem.",
-                                profileId, actionName));
+                //TODO Maybe Remove from the configuration if unsupported
+                kWarning() << "The profile " << profileId <<  "tried to activate"
+                                << actionName << "a non existent action. This is usually due to an installation problem"
+                                " or to a configuration problem. or simlpy the action is not supported";
             }
         }
 
